# SDL-cmake-subproject-test

./: .gitignore  .gitmodules  README.md  demo.cpp
.github/workflows/: continuous-integration.yml
test-CPMFindPackage/: CMakeLists.txt
test-FetchContent/: CMakeLists.txt
test-find-package/: CMakeLists.txt
test-git-submodule/: CMakeLists.txt
